# dcs-docs

./: .gitignore  CLAUDE.md  README.md  Sim_ControlAPI.md
docs/: README.md  ROADMAP.md  ground.md  index.json  mission-editor.md  mission-file-schema.md  miz-file-format.md  planes.md  sea.md  simulator-scripting-engine.md  weapons.md  wisdom.md
docs/data/: clsid-lookup.json
docs/factions/: README.md  allied-forces-1995.md  belka-1995.md  erusea-2004.md  erusea-2005.md  isaf-2004.md  isaf-2005.md  osea-2010.md  yuktobania-2010.md
docs/mission/: mission-file-schema.md  miz-file-format.md
docs/recipes/: air-intercept-script.md  air-to-air-setup.md  artillery-battery.md  awacs-setup.md  comm-plan.md  convoy-route.md  csg-setup.md  ground-firefight.md  jtac-setup.md  player-slots.md  sam-site-setup.md  tanker-setup.md  weather-time.md
docs/scripting/: README.md  concepts.md  lua-basics.md  simulator-scripting-engine.md
docs/terrains/: caucasus.md
docs/units/: ground.md  planes.md  (+4 more)
liveries/: 1l13-ewr.md  2b11-mortar.md  2s6-tunguska.md  55g6-ewr.md  5p73-s-125-ln.md  README.md  a-10a.md  a-10c-2019-cpt.md  a-10c-2020-cpt.md  a-10c.md  a-10cii.md  a-50.md  a10c-cpt.md  aav7.md  ah-1w.md  ah-64a.md  ah-64d.md  ah-64d_blk_ii.md  ajs37.md  ajs37cockpit.md  an-26b.md  an-30m.md  atmz-5.md  atz-10.md  av8bna.md  b-1b.md  b-52h.md  b-8v20a.md  bf-109k-4.md  bm-21-40.md  bmd-1.md  bmp-1.md  bmp-2.md  bmp-3.md  boman.md  btr_d.md  c-101cc.md  c-101eb.md  c-130.md  c-130j-30.md  (+242 more)
pdf/: DCS_User_Manual_EN_2020.txt
scripts/: pdf_to_text.py
tools/clsid-export/: README.md  generate_clsid_lookup.py  pyproject.toml
tools/livery-export/: extract_liveries.py  pyproject.toml
tools/terrain-export/: README.md  ROADMAP.md  generate_missions.py  lua_ast.py  process_terrain.py  pyproject.toml  terrain-sampler.lua
tools/terrain-export/missions/: afghanistan-terrain-export.miz  caucasus-terrain-export.miz  falklands-terrain-export.miz  kola-terrain-export.miz  marianaislands-terrain-export.miz  nevada-terrain-export.miz  persiangulf-terrain-export.miz  sinai-terrain-export.miz  syria-terrain-export.miz
(+61 files in other folders)
