[project]
name = "livery-export"
version = "0.1.0"
description = "Extract livery lists from DCS World installation"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[project.scripts]
extract-liveries = "extract_liveries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["extract_liveries.py"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"
