[project]
name = "terrain-export"
version = "0.1.0"
description = "Process DCS World terrain exports into markdown documentation"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[project.scripts]
process-terrain = "process_terrain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["process_terrain.py"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"
